--- a/src/Components/NewIngredient.css
+++ b/src/Components/NewIngredient.css
@@ -1,7 +1,14 @@
 .add-button {
   margin-top: 15px;
+  margin-right: 20px;
 }
 
 .add-button:hover {
   cursor: pointer;
+}
+
+.ingredient-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
