--- a/src/Components/AddNewRecipe.css
+++ b/src/Components/AddNewRecipe.css
@@ -1,9 +1,6 @@
-.App {
+.form-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
 }
-
