Adds button for adding new ingredient if autocomplete can't find it

--- a/src/Components/AddNewRecipe.css
+++ b/src/Components/AddNewRecipe.css
@@ -6,5 +6,10 @@
 }
 
 .ingredient-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-top: 20px;
+  width: 500px;
 }
