--- a/src/Components/ViewRecipe.css
+++ b/src/Components/ViewRecipe.css
@@ -19,11 +19,19 @@ h1 {
 }
 
 .ingredients {
-  width: 80%;
-  
+  width: 100%;
+  height: 20%;
+  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .directions {
   width: 80%;
   
+}
+
+table {
+  border: 1px solid black;
 }
