Now displays directions for chosen recipe

--- a/src/Components/ViewRecipe.css
+++ b/src/Components/ViewRecipe.css
@@ -19,12 +19,13 @@ h1 {
 }
 
 .ingredients {
-  width: 100%;
+  margin-left: 20px;
+  width: 90%;
   height: 20%;
-  background-color: aqua;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  
 }
 
 .directions {
