--- a/src/Components/Landing.css
+++ b/src/Components/Landing.css
@@ -1,7 +1,6 @@
 .landing-container {
   margin-top: 75px;
   width: 90vw;
-  
   background-color: #f8edeb;
   border: 10px solid #ffb5a7;
   border-radius: 10px;
@@ -10,10 +9,10 @@
 
 .hero-banner {
   width: 100%;
-  height: 30%;
+  height: 45vh;
   overflow: hidden;
   border-radius: 2px;
-  background-image: url("https://images.unsplash.com/photo-1601118964938-228a89955311?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
+  background-image: url("https://cdn.pixabay.com/photo/2015/11/19/10/38/food-1050813_960_720.jpg");
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: cover;
