--- a/src/Components/AddNewRecipe.css
+++ b/src/Components/AddNewRecipe.css
@@ -7,7 +7,14 @@
   background-color: #f8edeb;
   margin-top: 10vh;
   border-radius: 10px;
-  overflow-y: scroll;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.new-recipe-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ingredient-list {
