Updates styling on submit buttons

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,43 @@
   margin-right: auto;
 }
 
+.pink-button, input[type=submit] {
+	box-shadow: 0px 10px 14px -7px #fd8671;
+	background:linear-gradient(to bottom, #fcd5ce 5%, #ffb6a7 100%);
+	background-color:#fcd5ce;
+	border-radius:4px;
+	border:1px solid #ffb6a7;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #fd8671;
+  width: 100px;
+  height: 50px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+input[type=submit]:hover {
+	background:linear-gradient(to bottom, #ffb6a7 5%, #fcd5ce 100%);
+	background-color:#ffb6a7;
+}
+
+.pink-button:hover {
+  background:linear-gradient(to bottom, #ffb6a7 5%, #fcd5ce 100%);
+	background-color:#ffb6a7;
+}
+
+input[type=submit]:active {
+	position:relative;
+	top:1px;
+}
+
+.pink-button:active {
+  position: relative;
+  top: 1px;
+}
