Updates colour scheme

--- a/src/Components/ViewRecipes.css
+++ b/src/Components/ViewRecipes.css
@@ -1,8 +1,8 @@
 .landing-container {
   margin-top: 75px;
   width: 90vw;
-  background-color: #f8edeb;
-  border: 10px solid #ffb5a7;
+  background-color: #C7F9CC;
+  border: 10px solid #22577A;
   border-radius: 10px;
   
 }
