--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@
 }
 
 .pink-button, input[type=submit] {
-	box-shadow: 0px 10px 14px -7px #fd8671;
-	background:linear-gradient(to bottom, #fcd5ce 5%, #ffb6a7 100%);
-	background-color:#fcd5ce;
+	box-shadow: 0px 10px 14px -7px #22577A;
+	background:linear-gradient(to bottom, #57CC99 5%, #38A3A5 100%);
+	background-color:#57CC99;
 	border-radius:4px;
-	border:1px solid #ffb6a7;
+	border:1px solid #38A3A5;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -21,7 +21,7 @@
 	font-weight:bold;
 	padding:6px 12px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #fd8671;
+	text-shadow:0px 1px 0px #22577A;
   width: 100px;
   height: 50px;
   margin-top: 20px;
@@ -29,12 +29,12 @@
 }
 
 input[type=submit]:hover {
-	background:linear-gradient(to bottom, #ffb6a7 5%, #fcd5ce 100%);
-	background-color:#ffb6a7;
+	background:linear-gradient(to bottom, #38A3A5 5%, #57CC99 100%);
+	background-color:#38A3A5;
 }
 
 .pink-button:hover {
-  background:linear-gradient(to bottom, #ffb6a7 5%, #fcd5ce 100%);
+  background:linear-gradient(to bottom, #38A3A5 5%, #57CC99 100%);
 	background-color:#ffb6a7;
 }
 
