--- a/src/Components/AddNewRecipe.css
+++ b/src/Components/AddNewRecipe.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 40vw;
   height: 80vh;
-  background-color: #f8edeb;
+  background-color: #C7F9CC;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
