--- a/src/Components/AddNewRecipe.scss
+++ b/src/Components/AddNewRecipe.scss
@@ -1,10 +1,12 @@
+@import "../globals/variables.scss";
+
 .form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 40vw;
   height: 80vh;
-  background-color: #C7F9CC;
+  background-color: $base-light;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
