--- a/src/Components/NavBar.scss
+++ b/src/Components/NavBar.scss
@@ -1,3 +1,5 @@
+@import "../globals/variables.scss";
+
 .navbar {
   width: 100%;
   height: 50px;
@@ -9,6 +11,7 @@
   flex-wrap: nowrap;
   justify-content: space-evenly;
   color: black;
+  font-family: $main-font;
 }
 
 .nav-item {
