--- a/src/Components/Calendar.scss
+++ b/src/Components/Calendar.scss
@@ -1,5 +1,7 @@
 .calendar-container {
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 38%;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
