--- a/src/Components/AddNewRecipe.scss
+++ b/src/Components/AddNewRecipe.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   width: 40vw;
-  height: 80vh;
+  min-height: 80vh;
   background-color: $base-light;
   border-radius: 10px;
   margin-left: auto;
