Updates colour scheme

--- a/src/Components/Calendar.scss
+++ b/src/Components/Calendar.scss
@@ -4,6 +4,10 @@
   width: 60%;
   margin-top: 100px;
   margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .recipe-link:hover {
