--- a/src/globals/variables.scss
+++ b/src/globals/variables.scss
@@ -1,5 +1,5 @@
-$base-colour: #38a3a5;
-$base-dark: #22577a;
-$base-light: #57cc99;
+$base-colour: #06aed5;
+$base-dark: #086788;
+$base-light: #f2f4f3;
 
 $main-font: 'Roboto';
