Adds delete/edit icons to recipe

--- a/src/Components/ViewRecipes.scss
+++ b/src/Components/ViewRecipes.scss
@@ -28,3 +28,13 @@
 .menu-button {
   margin-bottom: 20px;
 }
+
+.icon-delete:hover {
+  cursor: pointer;
+  color: red;
+}
+
+.icon-edit:hover {
+  cursor: pointer;
+  color: blue;
+}
