Moves icons down a bit

--- a/src/Components/ViewRecipes.scss
+++ b/src/Components/ViewRecipes.scss
@@ -34,6 +34,16 @@
   color: red;
 }
 
+.icon-delete {
+  position: relative;
+  top: 8px;
+}
+
+.icon-add {
+  position: relative;
+  top: 8px;
+}
+
 .icon-edit:hover {
   cursor: pointer;
   color: blue;
